fixing text overflow on mobile

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -267,6 +267,6 @@ footer {
     width: 50vw;
     min-width: 220px;
     height: 70vh;
-    min-height: 465px;
+    min-height: 440px;
   }
 }
